--- a/Standard_UC_JJO.csproj
+++ b/Standard_UC_JJO.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="ColorPickerJJO.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="PickFolder_JJO.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -56,6 +61,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="ColorPickerJJO.xaml.cs">
+      <DependentUpon>ColorPickerJJO.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PickFolder_JJO.xaml.cs">
       <DependentUpon>PickFolder_JJO.xaml</DependentUpon>
     </Compile>
