--- a/Standard_UC_JJO.csproj
+++ b/Standard_UC_JJO.csproj
@@ -48,6 +48,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="PickFile_JJO.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PickFolder_JJO.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -56,6 +60,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="PickFile_JJO.xaml.cs">
+      <DependentUpon>PickFile_JJO.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PickFolder_JJO.xaml.cs">
       <DependentUpon>PickFolder_JJO.xaml</DependentUpon>
     </Compile>
